# Caustic

./: CMakeLists.txt  README.md  TODO.md  TODO_AABB_OPTIMIZATION.md  TODO_MESH_AND_PRIMITIVES.md  TODO_SHAPE_PRIMITIVES_STEP2.md
include/: aabb.h  aabox.h  bvh.h  camera.h  color.h  cone.h  cylinder.h  hittable.h  hittable_list.h  material.h  mesh.h  obj_loader.h  ply_loader.h  ray.h  rtweekend.h  scene_manager.h  sphere.h  stl_loader.h  triangle.h  vec3.h  vertex.h  xy_rect.h  xz_rect.h  yz_rect.h
src/: main.cpp
